--- a/_posts/jdk/2015-04-23-jdk-01.md
+++ b/_posts/jdk/2015-04-23-jdk-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: ""
-description: "java.util.Arryas"
+title: "java.util.Arrays"
+description: "java.util.Arrays"
 category: 
 tags: [JDK]
 ---
