--- a/_posts/jdk/2015-04-23-jdk-01.md
+++ b/_posts/jdk/2015-04-23-jdk-01.md
@@ -7,6 +7,8 @@ tags: [JDK]
 ---
 {% include JB/setup %}
 
+### 概述 
+
 Arrays是操作数组的的工具类，主要包含的功能有：
 
 - 提供了操作数组的方法，例如排序和搜索
@@ -27,6 +29,23 @@ Arrays是操作数组的的工具类，主要包含的功能有：
 - fill及其重载方法
 - copyOf及其重载方法
 - copyOfRange及其重载方法
+
+### Sort方法的实现
+
+`Arrays.sort`作为java里通用的排序算法，它必须保证其算法的高效和通用。
+
+首先，从通用性上来讲，它必须能够支持java里的基本类型和对象类型。基本类型的实现方式比较简单，就是为每种类型单独重载一套方法。对象类型的实现分为两种：一种是实现了`java.lang.Comparable`接口，一种是直接提供`java.uitl.Comparator`作为比较器进行排序的。对于这两种也都是通过重载的方式来实现的。
+
+其次，就是排序的效率问题了，从通用算法的角度来看，必须要考虑时间和空间的效率。
+
+－ 排序最重要的是效率，所以首先会选择最快的算法
+－ 其次，算法使用的空间也是一个很重要的参数，所以会优先选择原地排序的算法
+－ 最后，算法的稳定性也很重要，作为通用算法，必须满足绝大部分的使用场景，所以稳定的算法能够保证不会因为数据的问题而导致算法的执行效率会退化
+
+首先，我们来参考一下常用的排序算法：
+
+
+
 
 
 
