--- a/_posts/jdk/2015-04-23-jdk-01.md
+++ b/_posts/jdk/2015-04-23-jdk-01.md
@@ -10,12 +10,10 @@ tags: [JDK]
 ### 概述 
 
 Arrays是操作数组的的工具类，主要包含的功能有：
-
 - 提供了操作数组的方法，例如排序和搜索
 - 提供了将数组作为列表操作的静态工厂
 
 主要的方法和类有：
-
 - NaturalOrder
 - rangeCheck
 - sort及其重载方法
@@ -43,7 +41,11 @@ Arrays是操作数组的的工具类，主要包含的功能有：
 － 最后，算法的稳定性也很重要，作为通用算法，必须满足绝大部分的使用场景，所以稳定的算法能够保证不会因为数据的问题而导致算法的执行效率会退化
 
 首先，我们来参考一下常用的排序算法：
+![](../../images/sort.png)
 
+从上面的结果上可以看出，满足inplace和stable的只有插入排序算法，但是插入排序的效率不是很高，平均还是O(n^2)。所以我们从效率上来考虑我们还是会选择更加快速的算法。再看看满足inplace和效率的算法，就只剩下quick和3-way quick的算法了，3-way quick是对quick算法的改进算法，在效率和稳定性上比quicksort更好。
+
+这样，看来，貌似我们已经知道系统的sort方法是直接通过3-way quick算法来实现的了。但是，实际实现上还是有一定的差别的，下面来看看实际的代码实现。
 
 
 
