--- a/_posts/jdk/2015-04-23-jdk-01.md
+++ b/_posts/jdk/2015-04-23-jdk-01.md
@@ -153,7 +153,31 @@ Arrays是操作数组的的工具类，主要包含的功能有：
     }
 {% endhighlight %}
 
-这才是最终进行排序的代码。
+这才是最终进行排序的代码，首先看第一段：
+
+{% highlight java %}
+ // Use Quicksort on small arrays
+        if (right - left < QUICKSORT_THRESHOLD) {
+            sort(a, left, right, true);
+            return;
+        }
+{% endhighlight %}
+
+这段代码比较简单，当数组中元素的数目少于`QUICKSORT_THRESHOLD`（286）的时候，就直用`Quicksort`，接着看quicksort的代码：
+{% highlight java %}
+int length = right - left + 1;
+
+        // Use insertion sort on tiny arrays
+        if (length < INSERTION_SORT_THRESHOLD) {
+			...
+		}
+{% endhighlight %}
+
+这段代码的逻辑可以看出来，当数组的元素少于`INSERTION_SORT_THRESHOLD`（47）时，会采用插入排序的算法。
+
+如果超出这个长度，用的是Dual-Pivot Quicksort。
+
+
 
 
 
