--- a/_posts/nio/2015-05-18-nio-1.md
+++ b/_posts/nio/2015-05-18-nio-1.md
@@ -23,7 +23,7 @@ server的处理逻辑，是一个while循环：
 - 然后根据不同key的事件进行处理
 
 一个简单的TimeServer代码如下：
-<pre><code>
+{% highlight java %}
 public class NIOTimeServer {
 
     public static void main(String[] args) throws Exception{
@@ -83,8 +83,7 @@ public class NIOTimeServer {
 
 }
 
-
-</code></pre>
+{% endhighlight %}
 
 这里可以看到一个很严重的问题在于，对于业务的处理和对于事件的处理交织在一起，代码逻辑比较混乱。
 
