add more content

--- a/_posts/nio/2015-05-18-nio-1.md
+++ b/_posts/nio/2015-05-18-nio-1.md
@@ -87,6 +87,10 @@ public class NIOTimeServer {
 
 这里可以看到一个很严重的问题在于，对于业务的处理和对于事件的处理交织在一起，代码逻辑比较混乱。
 
+一种比较好的方式就是能够做到让处理事件的逻辑和代码逻辑分离。
+
+上面这个代码其实还不够明显，
+
 
 
 
