--- a/_posts/web/2015-06-07-web-01.md
+++ b/_posts/web/2015-06-07-web-01.md
@@ -27,7 +27,7 @@ tags: [MAVEN]
 ### 手动添加jar包到maven库
 
 {% highlight java %}
-
+nux
 mvn install:install-file -Dfile=velocity-1.7.jar -DgroupId=org.apache.velocity -DartifactId=velocity -Dversion=1.7 -Dpackaging=jar
 
 {% endhighlight %}
