--- a/_posts/linux/2015-06-07-linux-1.md
+++ b/_posts/linux/2015-06-07-linux-1.md
@@ -13,6 +13,7 @@ linux下terminal快捷键
 本文讲述了Linux命令行编辑快捷键的方法，希望对您有所帮助。
 Linux命令行编辑快捷键：
 
+{% highlight python %}
 history 显示命令历史列表
 ↑(Ctrl+p) 显示上一条命令
 ↓(Ctrl+n) 显示下一条命令
@@ -108,4 +109,6 @@ Ctrl-Alt-Del:挂起或者重新启动系统，这三个Linux命令行按键在Li
  Left-click-and-drag mouse: 选择并且拷贝到剪贴板。
  Click middle mouse button: 使用剪贴板的内容粘贴。
  Meta-key (Emacs terminology) 传统的是使用 Left-Alt-key
+
+ {% endhighlight %}
 以上是Linux命令行编辑快捷键的方法。
