--- a/_posts/linux/2015-06-08-linux-3.md
+++ b/_posts/linux/2015-06-08-linux-3.md
@@ -19,3 +19,17 @@ tags: [Linux,CentOS,Java]
 # tar xzf jdk-8u45-linux-x64.tar.gz
 
 {% endhighlight %}
+
+然后通过/usr/sbin/alternatives来配置
+
+{% highlight python %}
+./alternatives --install /usr/bin/java java /usr/runtime/jdk1.8.0_45/bin/java 300
+{% endhighlight %}
+
+最后配置需要的java
+
+{% highlight python %}
+
+./alternatives --config java
+
+{% endhighlight %}
