--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2016读书计划"
 description: "2016读书计划"
-category: 
+category:
 tags: [Reading]
 ---
 {% include JB/setup %}
@@ -16,3 +16,11 @@ tags: [Reading]
 ### 非技术类
 
 #### 《穷查理宝典》
+
+###  原版书籍
+
+#### 《Game of Thrones》
+
+### 《Think, Fast and Slow》
+
+### 《Murder on the Orient Express》
