--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -11,6 +11,7 @@ tags: [Reading]
 
 #### 《MySQL技术内幕：InnoDB存储引擎》
 
+#### 《High Performance MySQL》
 
 
 ### 非技术类
@@ -23,4 +24,4 @@ tags: [Reading]
 
 ### 《Think, Fast and Slow》
 
-### 《Murder on the Orient Express》
+### 《Murder on the Orient Express》 完成
