--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -9,9 +9,18 @@ tags: [Reading]
 
 ### 技术类
 
-#### 《MySQL技术内幕：InnoDB存储引擎》
+#### 数据库类
 
-#### 《High Performance MySQL》
+-《MySQL技术内幕：InnoDB存储引擎》
+- High Performance MySQL》
+
+#### 开发相关
+
+##### React JS
+
+#### NodeJS
+
+#### java
 
 
 ### 非技术类
@@ -22,6 +31,6 @@ tags: [Reading]
 
 #### 《Game of Thrones》
 
-### 《Think, Fast and Slow》
+#### 《Think, Fast and Slow》
 
 ### 《Murder on the Orient Express》 完成
