add book, add progress

--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -25,12 +25,10 @@ tags: [Reading]
 
 ### 非技术类
 
-#### 《穷查理宝典》
+-《穷查理宝典》
 
 ###  原版书籍
 
-#### 《Game of Thrones》
-
-#### 《Think, Fast and Slow》
-
-### 《Murder on the Orient Express》 完成
+-《Game of Thrones》
+-《Think, Fast and Slow》
+-《Murder on the Orient Express》 完成
