--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -11,7 +11,8 @@ tags: [Reading]
 
 #### 数据库类
 
--《MySQL技术内幕：InnoDB存储引擎》
+- MySQL技术内幕：InnoDB存储引擎》
+
 - High Performance MySQL》
 
 #### 开发相关
@@ -25,10 +26,9 @@ tags: [Reading]
 
 ### 非技术类
 
--《穷查理宝典》
+- 《穷查理宝典》
 
 ###  原版书籍
-
--《Game of Thrones》
--《Think, Fast and Slow》
--《Murder on the Orient Express》 完成
+- 《Game of Thrones》
+- 《Think, Fast and Slow》
+- 《Murder on the Orient Express》 完成
