--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -32,3 +32,4 @@ tags: [Reading]
 - 《Game of Thrones》
 - 《Think, Fast and Slow》
 - 《Murder on the Orient Express》 完成
+- 《A short history of nearly everything》
