--- a/_posts/personal/2015-06-21-personal-1.md
+++ b/_posts/personal/2015-06-21-personal-1.md
@@ -10,10 +10,8 @@ tags: [Reading]
 ### 技术类
 
 #### 数据库类
-
-- MySQL技术内幕：InnoDB存储引擎》
-
-- High Performance MySQL》
+- 《MySQL技术内幕：InnoDB存储引擎》
+- 《High Performance MySQL》
 
 #### 开发相关
 
