add v8 related resource

--- a/_posts/personal/2015-07-07-plan-1.md
+++ b/_posts/personal/2015-07-07-plan-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "技术资料"
 description: "技术资料"
-category:
+category:"index"
 tags: [Material,Tech]
 ---
 {% include JB/setup %}
@@ -10,3 +10,9 @@ tags: [Material,Tech]
 ### 分布式系统相关
 
 ### 数据库相关
+
+### 虚拟机和引擎
+- JVM
+- V8引擎
+  -  [《使用 Google V8 引擎开发可定制的应用程序》](http://www.ibm.com/developerworks/cn/opensource/os-cn-v8engine/)
+  -   https://github.com/v8/v8-git-mirror
