--- a/_posts/personal/2015-07-07-plan-1.md
+++ b/_posts/personal/2015-07-07-plan-1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "技术资料"
-description: "技术资料"
-category:"index"
-tags: [Material,Tech]
+description: "技术资料索引"
+category:"Tech"
+tags: [Reading]
 ---
 {% include JB/setup %}
 
