--- a/_posts/personal/2015-07-07-plan-1.md
+++ b/_posts/personal/2015-07-07-plan-1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "技术资料"
-description: "技术资料索引"
-category:"Tech"
-tags: [Reading]
+title: "技术资料索引"
+description: "2015读书计划"
+category: "索引信息"
+tags: [Material]
 ---
 {% include JB/setup %}
 
@@ -14,5 +14,8 @@ tags: [Reading]
 ### 虚拟机和引擎
 - JVM
 - V8引擎
-  -  [《使用 Google V8 引擎开发可定制的应用程序》](http://www.ibm.com/developerworks/cn/opensource/os-cn-v8engine/)
-  -   https://github.com/v8/v8-git-mirror
+  - [《使用 Google V8 引擎开发可定制的应用程序》](http://www.ibm.com/developerworks/cn/opensource/os-cn-v8engine/)
+  - https://github.com/v8/v8-git-mirror
+  - [Google V8 官网](https://developers.google.com/v8/get_started)
+  - 下载和编译v8引擎
+  - Node相关
