--- a/_posts/jvm/2016-04-20-bytecode.md
+++ b/_posts/jvm/2016-04-20-bytecode.md
@@ -17,6 +17,17 @@ Java字节码是java语言实现'Write once, Run Everywhere'的基础。它是Ja
 
 Java字节码可以跨不同的虚拟机在不同的平台上执行，这些字节码按照class文件格式的规范组成了class文件，从而为Java语言跨平台执行奠定了基石；不同的语言都可以根据class文件格式生成可以在JVM上执行的字节码，这又给Java平台带来了新的血液。 class文件是Java程序二进制的精确定义 。每一个class文件都是对一个Java 类或者接口的描述。因为有着同一的格式， 无论在何种平台上产生，也无论是在何种平台上运行，class文件的定义都能够被Java虚拟机正确地读取。下面先看看class文件的格式:
 [class file](http://kenvifire.github.com/images/jvm-1.png)
+<pre><code>
+public class SimpleClass {
+
+    public void sayHello() {
+        System.out.println("Hello");
+    }
+
+}
+</code></pre>
+
+
 
 其中u1，u2，u4，u8分别代表1字节，2字节，4字节和8字节的无符号类型整数。
 
@@ -40,7 +51,7 @@ ClassFile中的字段简单说明如下：
 
 9、methods 保存了当前类的方法列表，包含两部分的内容：methods_count和methods[methods_count] methods_count是该类或者接口显示定义的方法的数量。 method[]是包含方法信息的一个详细列表。
 
-10、attributes 包含了当前类的attributes列表，包含两部分内容：attributes_count 和 attributes[attributes_count] class文件的最后一部分是属性，它描述了该类或者接口所定义的一些属性信息。attributes_count指的是attributes列表中包含的attribute_info的数量。 属性可以出现在class文件的很多地方，而不只是出现在attributes列表里。如果是attributes表里的属性，那么它就是对整个class文件所对应的类或者接口的描述；如果出现在fileds的某一项里，那么它就是对该字段额外信息的描述；如果出现在methods的某一项里，那么它就是对该方法额外信息的描述。\
+10、attributes 包含了当前类的attributes列表，包含两部分内容：attributes_count 和 attributes[attributes_count] class文件的最后一部分是属性，它描述了该类或者接口所定义的一些属性信息。attributes_count指的是attributes列表中包含的attribute_info的数量。 属性可以出现在class文件的很多地方，而不只是出现在attributes列表里。如果是attributes表里的属性，那么它就是对整个class文件所对应的类或者接口的描述；如果出现在fileds的某一项里，那么它就是对该字段额外信息的描述；如果出现在methods的某一项里，那么它就是对该方法额外信息的描述。
 
 ## 字节码
 字节码存放在code_attributes，运行时会加载到虚拟机的方法区进行执行。
@@ -73,12 +84,22 @@ ClassFile中的字段简单说明如下：
 
 ## insturment
 
+### 常用的库
+
+#### javassist
+
+#### ASM
+
 ## 实际应用
 
-### 常用的库
+#### 
+
+
+
 
 ### 高级应用
 
 #### javaflow
+
 ##### baker
 ##### kilim
