--- a/_posts/jvm/2016-04-20-bytecode.md
+++ b/_posts/jvm/2016-04-20-bytecode.md
@@ -88,18 +88,30 @@ ClassFile中的字段简单说明如下：
 
 #### javassist
 
+－ 优点
+   - 面向源码，简单易用
+- 缺点
+   - 无法操作字节码
+   - 无法利用class文件里的attribute
+
+
 #### ASM
+- 优点
+    － 面向字节码
+－ 缺点
+    － 类似于汇编语言，编码难度高
 
 ## 实际应用
-
-#### 
-
-
+#### 性能测试demo
+#### Mock接口demo
+#### Java Shell demo
 
 
 ### 高级应用
 
 #### javaflow
+
+
 
 ##### baker
 ##### kilim
