--- a/_posts/jvm/2016-04-20-bytecode.md
+++ b/_posts/jvm/2016-04-20-bytecode.md
@@ -11,7 +11,7 @@ tags: [JVM,bytecode]
 ## 概述
 Java字节码是java语言实现'Write once, Run Everywhere'的基础。它是Java虚拟机的指令集。
 
-### JVM结构
+## JVM内部结构
 [jvm](http://blog.jamesdbloom.com/images_2013_11_17_17_56/JVM_Internal_Architecture.png)
 
 
@@ -20,7 +20,7 @@ Java字节码是java语言实现'Write once, Run Everywhere'的基础。它是Ja
 
 Java字节码可以跨不同的虚拟机在不同的平台上执行，这些字节码按照class文件格式的规范组成了class文件，从而为Java语言跨平台执行奠定了基石；不同的语言都可以根据class文件格式生成可以在JVM上执行的字节码，这又给Java平台带来了新的血液。 class文件是Java程序二进制的精确定义 。每一个class文件都是对一个Java 类或者接口的描述。因为有着同一的格式， 无论在何种平台上产生，也无论是在何种平台上运行，class文件的定义都能够被Java虚拟机正确地读取。下面先看看class文件的格式:
 
-![class file](http://kenvifire.github.com/images/jvm-1.png)
+[class file](http://kenvifire.github.com/images/jvm-1.png)
 
 
 其中u1，u2，u4，u8分别代表1字节，2字节，4字节和8字节的无符号类型整数。
@@ -153,7 +153,7 @@ SourceFile: "SimpleClass.java"
 - getstatic 
 - invokespecial,invokevirtual 
 
-![sayHello](http://blog.jamesdbloom.com/images_2013_11_17_17_56/bytecode_explanation_sayHello.png )
+[sayHello](http://blog.jamesdbloom.com/images_2013_11_17_17_56/bytecode_explanation_sayHello.png )
 
 
 ## 字节码
@@ -181,29 +181,37 @@ SourceFile: "SimpleClass.java"
     - char
     - float
     - double
-- ReturnAddress
+- ReturnAddress:指向虚拟机指令的地址
+	 
 - Reference Type
+    	- class type
+	  	- array type
+	  	- interface type
+	  	
 
-## Java字节码逆向工程
+## Java字节码应用
 
-## insturment
+### insturment
 
 ### 常用的库
 
 #### javassist
     
-－ 优点
+- 优点
    - 面向源码，简单易用
+   
 - 缺点
    - 无法操作字节码
    - 无法利用class文件里的attribute
 
 
 #### ASM
+
 - 优点
-    － 面向字节码
-－ 缺点
-    － 类似于汇编语言，编码难度高
+	-  面向字节码，几乎可以完成所有的字节码修改工作
+    
+-  缺点
+	- 类似于汇编语言，编码难度高
 
 ## 实际应用
 
@@ -214,20 +222,44 @@ SourceFile: "SimpleClass.java"
 #### Java Shell demo
 
 
-### 高级应用
+## 高级应用
 
 #### javaflow
+
 Continuations framework for java.
+<pre><code>
+class MyRunnable implements Runnable {
+    public void run() {
+        System.out.println("started!");
+        for( int i=0; i<10; i++ )
+            echo(i);
+    }
+    private void echo(int x) {
+        System.out.println(x);
+        Continuation.suspend();
+    }
+}
+</code></pre>
 
 ##### brakes
     
-    Java线程序列化框架
-    
+Java线程序列化框架
 
+#### brakes desitribute
 
+Java分布式线程框架
+
+	- 远程锁
+   
 
 ##### kilim
 
  Kilim是一个Java的actor框架，让你可以在JVM里使用基于协程的actor模型。
 
-![kilim](http://www.blogjava.net/images/blogjava_net/killme2008/kilim.png)
+[kilim](http://www.blogjava.net/images/blogjava_net/killme2008/kilim.png)
+
+### 虚拟机语言
+
+#### Scala
+
+
