--- a/_posts/share/2016-08-22-map.md
+++ b/_posts/share/2016-08-22-map.md
@@ -1,58 +1,74 @@
+---
+layout: post
+title: "Uber 面试问题 - Map的实现"
+description: ""
+category:
+tags: [interview]
+---
+{% include JB/setup %}
+
+* TOC
+{:toc}
+
 ## Uber 面试问题 - Map的实现
 
-在这周的面试问题专栏里，我将会分析我最近所看到的最好的问题之一。我会把伪代码也放出来，因为有很多人希望我能够提供它来帮助他们更好地去理解具体的算法逻辑。
+译者: 朱伟杰 原文链接: [Uber Interview Question – Map Implementation](http://blog.gainlo.co/index.php/2016/08/14/uber-interview-question-map-implementation/)
 
-值得再次强调的是，最终的代码/结果并不重要，重要的是整个分析的过程，在这里我会教你如何一步一步地走向正确答案。
+在这周的面试问题专栏里，我们会重点分析我最近所看到的最好的一个问题。我们也会把伪代提供出来，因为有很多人希望我能够提供伪代码来帮助他们更好地去理解具体的算法逻辑。
+
+值得再次强调的是，最终的代码或者结果并不重要，重要的是整个分析的过程，在这里我们会教你如何一步一步地走向正确答案。
 
 ### 问题
 	实现一个“Map”数据结构用来保存整数（键值）对，并且在O(1)的时间复杂度下实现以下操作：void insert(key,value), void delete(key),int get(key), int getRandomKey()。
-	
-我们选择这这个问题主要是基于两个原因：
+		
+		我们选择这这个问题主要是基于两个原因：
 
-- 这个问题是Uber上个月面试中问到的，并且引起了很多讨论。
-- 这是一个测试你对基础数据结构的<b>理解程度</b>的好问题。单纯记忆数据结构的定义是没用的。你需要的是<b>理解</b>它。
+		- 这个问题是Uber上个月面试中问到的，并且引起了广泛的讨论。
+		- 这是一个测试你对基础数据结构的<b>理解程度</b>的好问题。单纯记忆数据结构的定义是没用的，你需要的是<b>理解</b>它。
 
 ### 分析 I
 
-首先，你自己先思想一下这个问题。这是一个测试你对基本数据结构理解程度的绝佳机会。
+首先，你自己先思想一下这个问题。这也是一个测试你对基本数据结构理解程度的绝佳机会。
 
 开始吧。
 
-实现map的方式有很多种，例如C++标准库底层使用红黑树来实现的。不过，要是想保证时间复杂度是O(1)，哈希应该是你第一时间想到的，并且我希望你也是立马想到。
+实现map的方式有很多种，例如C++标准库底层使用红黑树来实现的。不过，要是想保证时间复杂度是O(1)，哈希应该是你第一时间想到的，并且我希望你也能够立马想到这点。
 
-通过hashmap，你可以很容易实现时间复杂度是O(1)的Insert，Get和Delete操作。不过，这个题目的有趣之处是在于GetRandomKey函数。正如你所了解的，hashmap是没法直接获取所有的key的，你需要O(n)的时间来获取一个随机key。
+通过hashmap，你可以很容易实现时间复杂度是O(1)的Insert，Get和Delete操作。不过，这个题目的有趣之处是在于GetRandomKey函数。正如你所了解的，hashmap是没法直接获取所有的key的，因此你需要O(n)的时间来获取一个随机key。
 
 ### 分析 II
 
-很多人都卡在这个地方了。不过，解决这个问题还是有很多思路的。
+很多人都卡在这个地方了。不过，解决这个问题还是有很多思路。
 
-首先，既然我们的问题是GetRandomKey的时间复杂度是O(n)而不是我们需要的O(1)，一个很有效的技术手段就是用时间换空间。明确的来说，就是如果想要程序跑的更快，我们可以试着用更多的空间来换。这可以提供一些比较粗的想法，例如使用其他的数据结构（可能是树，队列，链表，数组等）来单独存储所有的key，或者添加键值对的时候，额外存储一些信息。
+首先，我们的问题是GetRandomKey的时间复杂度是O(n)而不是我们需要的O(1)，一个很有效的技术手段就是用时间换空间。明确的来说，就是如果想要程序跑的更快，我们可以试着消耗多的空间来达到。这可以提供一些比较粗糙的想法，例如使用其他的数据结构（可能是树，队列，链表，数组等）来单独存储所有的key，或者在添加键值对的时候，额外存储一些信息。
 
-其次，在获取随机key的时候，最直接的方式就是通过一个随机数映射到对应的key上去。为了达到O(1)的时间复杂度，我们需要对一个数组进行随机采样。
+其次，在获取随机key的时候，最直接的方式就是先取一个随机数，然后将这个数映射到map里相对应的key上去。所以为了达到O(1)的时间复杂度，我们只需要对一个数组进行随机采样，然后再通过数组元素里存的数据映射到map对应的键值对。
 
-现在问题变得更加明确了。正确的做法似乎就是当我们插入一个新的键值对时，同时用一个数组保存新添加的key。当我们调用GetRandomKey的时候，我们很容易可以在O(1)的时间对数组进行采样。不过，新的问题又出现了。Delete操作的复杂度又变成了O(n)，因为你删除键值对的同时也需要从数组里移出相应的key。
+那么现在的问题就变得比较明确了。正确的做法似乎就是当我们插入一个新的键值对时，同时用一个数组保存新添加的key。这样的话，我们在调用GetRandomKey的时候，我们很容易可以在O(1)的时间对数组进行采样。不过，这里又出现了一个新的问题。Delete操作的复杂度又变成了O(n)，因为删除键值对的同时也需要从数组里移除相应的key。
 
 ### 分析 III
 
-如果你想实现O(1)复杂度的删除操作，另外一个方式是使用链表来保存key，不过，这个方式没法给你提供O(1)复杂度的GetRandomKey。
+如果要想实现O(1)复杂度的删除操作，另外一个方式是使用链表来保存key的列表，不过，这个方式没法给提供O(1)复杂度的GetRandomKey。
 
-这里有一个小技巧。本质上来说，你需要O(n)的时间来进行数组的删除操作是因为你需要保持原来的顺序。但是在这个问题里，其实是不需要的。假设，你的数组是[1,4,2,5,9]，你需要删除2，你可以把2和9进行交换，然后将数据的长度减一，不需要将5和9进行左移。尽快顺序乱了，但是我们实现了在O(1)的时间内完成删除的操作。
+但是我们可以通过一个小技巧来实现。本质上来说，你需要O(n)的时间来进行数组的删除操作是因为你需要保持原来的顺序。但是在这个问题里，其实顺序是不重要的。假设你的数组是[1,4,2,5,9]，你需要删除2，你可以把2和9进行交换，然后将数据的长度减一，不需要将5和9进行左移。尽管顺序乱了，但是我们实现了在O(1)的时间内完成删除的操作。
 
-另外，为了能够立即从数据里找到要删除的key，我们需要将对应的索引保存到map里。用之前的数组作为例子，当我们插入(4,10)的键值对时，我们需要保存<4,(10,1))>到map里，其中1是key在数据里的索引。
+另外，为了能够立即从数据里找到要删除的key，我们需要将对应的索引保存到map里。用之前的数组作为例子，当我们插入(4,10)的键值对时，我们需要保存`<4,(10,1))>`到map里，其中1是key在数据里的索引。
 
-下面是<b>伪代码</b>（我忽略了所有的检查，例如key是否在map里）
+下面是<b>伪代码</b>（我忽略了所有的校验逻辑，例如key是否在map里）
 
-![image](http://)
+![伪代码](/img/map.png)
+
+
 
 ### 总结
 
-其实这个问题没必要进行总结的
+其实这个问题没必要进行总结的，你只需要将整个解决问题的过程多阅读几遍就可以了。
 
-实际上，我解决这个问题的时候整个思考过程也是这样的。我考虑过之前提到所有的数据结构，例如链表，树等等...
+实际上，我解决这个问题的时候整个思考过程跟上面的过程是一致的。我也考虑过使用之前提到所有的数据结构，例如链表，树等等...
 
 还有一些其他的问题也是可以通过这种方式来解决的：
 
 - 如何设计和实现LRU缓存
 - 如何随机打乱一个数组（这里使用了和GetRandomKey一样的方法）
 
-另外，如果你需要从一些经验丰富的面试官那里获取经验，你可以试试Gainlo，你可以通过它去模拟Google，Facebook等公司的面试...
+另外，如果你需要从一些经验丰富的面试官那里获取经验，你可以试试[Gainlo](http://www.gainlo.co/?utm_source=www.itluobo.com)，你可以在它上面去模拟Google，Facebook等公司的面试...
