--- a/_posts/share/2016-08-22-map.md
+++ b/_posts/share/2016-08-22-map.md
@@ -19,12 +19,13 @@ tags: [interview]
 值得再次强调的是，最终的代码或者结果并不重要，重要的是整个分析的过程，在这里我们会教你如何一步一步地走向正确答案。
 
 ### 问题
-	实现一个“Map”数据结构用来保存整数（键值）对，并且在O(1)的时间复杂度下实现以下操作：void insert(key,value), void delete(key),int get(key), int getRandomKey()。
-		
-		我们选择这这个问题主要是基于两个原因：
 
-		- 这个问题是Uber上个月面试中问到的，并且引起了广泛的讨论。
-		- 这是一个测试你对基础数据结构的<b>理解程度</b>的好问题。单纯记忆数据结构的定义是没用的，你需要的是<b>理解</b>它。
+<i>实现一个“Map”数据结构用来保存整数（键值）对，并且在O(1)的时间复杂度下实现以下操作：void insert(key,value), void delete(key),int get(key), int getRandomKey()。</i>
+		
+我们选择这这个问题主要是基于两个原因：
+
+- 这个问题是Uber上个月面试中问到的，并且引起了广泛的讨论。
+- 这是一个测试你对基础数据结构的<b>理解程度</b>的好问题。单纯记忆数据结构的定义是没用的，你需要的是<b>理解</b>它。
 
 ### 分析 I
 
